--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,6 @@
 # Examples CMakeLists.txt
 add_executable(logger_example example.cpp)
 target_link_libraries(logger_example slick_logger)
+
+add_executable(multi_sink_example multi_sink_example.cpp)
+target_link_libraries(multi_sink_example slick_logger)
