--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,7 @@ find_package(GTest REQUIRED)
 add_executable(slick_logger_tests test_logger.cpp)
 target_link_libraries(slick_logger_tests slick_logger GTest::gtest_main)
 add_test(NAME slick_logger_tests COMMAND slick_logger_tests)
+
+add_executable(slick_logger_sink_tests test_sinks.cpp)
+target_link_libraries(slick_logger_sink_tests slick_logger GTest::gtest_main)
+add_test(NAME slick_logger_sink_tests COMMAND slick_logger_sink_tests)
