Implememt different datetime formatting

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,6 @@ target_link_libraries(logger_example slick_logger)
 
 add_executable(multi_sink_example multi_sink_example.cpp)
 target_link_libraries(multi_sink_example slick_logger)
+
+add_executable(timestamp_example timestamp_example.cpp)
+target_link_libraries(timestamp_example slick_logger)
