--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,17 @@
 # Examples CMakeLists.txt
-add_executable(logger_example example.cpp)
-target_link_libraries(logger_example slick_logger)
+option(BUILD_SLICK_LOGGER_EXAMPLES "Build example executables" ON)
 
-add_executable(multi_sink_example multi_sink_example.cpp)
-target_link_libraries(multi_sink_example slick_logger)
+if(BUILD_SLICK_LOGGER_EXAMPLES)
+    add_executable(logger_example example.cpp)
+    target_link_libraries(logger_example slick_logger)
 
-add_executable(timestamp_example timestamp_example.cpp)
-target_link_libraries(timestamp_example slick_logger)
+    add_executable(multi_sink_example multi_sink_example.cpp)
+    target_link_libraries(multi_sink_example slick_logger)
+
+    add_executable(timestamp_example timestamp_example.cpp)
+    target_link_libraries(timestamp_example slick_logger)
+    
+    message(STATUS "Building examples")
+else()
+    message(STATUS "Skipping examples")
+endif()
