update log level references to use new naming convention

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,6 @@ add_subdirectory(examples)
 
 # Add benchmarks (optional)
 option(BUILD_SLICK_LOGGER_BENCHMARKS "Build performance benchmarks" OFF)
-if(BUILD_SLICK_LOGGER_BENCHMARKS)
+if(BUILD_SLICK_LOGGER_BENCHMARKS AND CMAKE_BUILD_TYPE MATCHES Release)
     add_subdirectory(benchmarks)
 endif()
