--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(slick_logger VERSION 0.1.0.0 LANGUAGES CXX)
+project(slick_logger VERSION 0.1.0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -12,7 +12,7 @@ set(BUILD_SLICK_QUEUE_TESTS OFF CACHE BOOL "" FORCE)
 FetchContent_Declare(
     slick_queue
     GIT_REPOSITORY https://github.com/SlickTech/slick_queue.git
-    GIT_TAG main
+    GIT_TAG v1.0.0.1
 )
 FetchContent_MakeAvailable(slick_queue)
 
