update cmake message

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,7 +11,7 @@ if(BUILD_SLICK_LOGGER_EXAMPLES)
     add_executable(timestamp_example timestamp_example.cpp)
     target_link_libraries(timestamp_example slick_logger)
     
-    message(STATUS "Building examples")
+    message(STATUS "Building slick_logger examples")
 else()
-    message(STATUS "Skipping examples")
+    message(STATUS "Skipping slick_logger examples")
 endif()
