--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,10 +20,10 @@ if(BUILD_SLICK_LOGGER_TESTING)
         target_link_libraries(slick_logger_timestamp_tests slick_logger GTest::gtest_main)
         add_test(NAME slick_logger_timestamp_tests COMMAND slick_logger_timestamp_tests)
         
-        message(STATUS "GTest found - building tests")
+        message(STATUS "GTest found - building slick_logger tests")
     else()
         message(STATUS "GTest not found - skipping tests")
     endif()
 else()
-    message(STATUS "Testing disabled - skipping tests")
+    message(STATUS "Testing disabled - skipping slick_logger tests")
 endif()
