fix slick_queue header include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ add_subdirectory(tests)
 add_subdirectory(examples)
 
 # Add benchmarks (optional)
-option(BUILD_SLICK_LOGGER_BENCHMARKS "Build performance benchmarks" OFF)
+option(BUILD_SLICK_LOGGER_BENCHMARKS "Build performance benchmarks" ON)
 if(BUILD_SLICK_LOGGER_BENCHMARKS AND CMAKE_BUILD_TYPE MATCHES Release)
     add_subdirectory(benchmarks)
 endif()
