Upgrade slick_queue to v1.1.2; Added vcpkg integration; Bump version to 1.0.1

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,13 +3,13 @@ option(BUILD_SLICK_LOGGER_EXAMPLES "Build example executables" ON)
 
 if(BUILD_SLICK_LOGGER_EXAMPLES)
     add_executable(logger_example example.cpp)
-    target_link_libraries(logger_example slick_logger)
+    target_link_libraries(logger_example slick::slick_logger)
 
     add_executable(multi_sink_example multi_sink_example.cpp)
-    target_link_libraries(multi_sink_example slick_logger)
+    target_link_libraries(multi_sink_example slick::slick_logger)
 
     add_executable(timestamp_example timestamp_example.cpp)
-    target_link_libraries(timestamp_example slick_logger)
+    target_link_libraries(timestamp_example slick::slick_logger)
     
     message(STATUS "Building slick_logger examples")
 else()
